--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -1,6 +1,9 @@
 @charset "utf-8";
 
 /******main********/
+* {
+	outline:0;
+}
 body{
 	margin:0px;
 	font-size:12px;
@@ -1090,6 +1093,14 @@ form.edit_page .submit_box input{
 	background:url('images/post_btn.gif');
 }
 
+.article .content_head .faved{
+	background:url('images/post_btn.gif') 0px -60px;
+}
+.article .content_head a.faved:hover{
+	background:url('images/post_btn.gif') 0px -40px;
+}
+
+
 .article .content_head .repost{
 	background:url('images/post_btn.gif') -20px -20px;
 }
@@ -1256,6 +1267,96 @@ form.edit_page .submit_box input{
 	color:#009fff;	
 }
 
+/***customize****/
+.customize .nav{
+	background:url("images/customize_menu_bg.png") repeat-x scroll 0 0 #EEEEEE;
+	height:40px;
+	min-width:950px;
+	padding-left:10px;
+}
+
+.customize .nav a{
+	display:block;
+	float:left;
+	height:40px;
+	line-height:38px;
+	padding:0 12px;
+	text-decoration:none;
+	color:#555555;
+	font-size:18px;
+	cursor:pointer;
+}
+
+.customize .nav a.clicked{
+	background:url("images/customize_menu_bg_active.png") repeat-x scroll 0 0 #2E6DCC;
+	color:#ffffff
+}
+
+.customize .nav span{
+	float:right;
+	line-height:40px;
+	padding-right:10px;
+}
+
+.customize .nav input{
+    -moz-border-bottom-colors: none;
+    -moz-border-image: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background-color: #aaa;
+    border-color: #C8C8C8 #B6B6B6 #B6B6B6 #C8C8C8;
+    border-radius: 5px 5px 5px 5px;
+    border-right: 1px solid #B6B6B6;
+    border-style: solid;
+    border-width: 1px;
+    color: white;
+    cursor: pointer;
+    font-size:14px;
+    padding: 6px 10px;
+    text-decoration: none;
+}
+
+.customize .nav input.save{
+	background:#57c328;
+}
+
+.customize .menu{
+	background:url("images/white_95.png") repeat scroll 0 0 transparent;
+    border-bottom: 1px solid #DDDDDD;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #DDDDDD;
+    padding:15px;
+    font-size:18px;
+}
+
+.customize .info{
+	width:380px;
+	height:500px;
+}
+
+.customize h1{
+	margin:0px;
+	padding:0px;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+.customize .info .title{
+    background: url("images/input_bg.gif") repeat-x scroll center top #FFFFFF;
+    border: 1px solid #DDDDDD;
+    font: 16px;
+    max-width: 350px;
+    min-width: 350px;
+    outline: 0 none;
+    padding: 5px;
+    width: 350px;
+}
+
+
+
 /*reply_list*/
 .reply_list h1{
 	margin:30px 0px;
@@ -1281,4 +1382,6 @@ div.new_reply .content_footer .right a.reply:hover
 .e404 { display: block; background: url('images/404.jpg') no-repeat; width: 700px; height: 605px; margin: auto; }
 .e500 { display: block; background: url('images/500.gif') no-repeat; width: 700px; height: 500px; margin: auto; }
 .e404_words, .e403_words, .e500_words { width: 500px; font-size: 20px; margin: auto; }
+
+
 
