--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -2,7 +2,7 @@
 
 /******main********/
 * {
-	outline:0;
+    outline: 0 none;
 }
 body{
 	margin:0px;
@@ -765,7 +765,7 @@ form.edit_page .submit_box input{
 	background:url('images/icons.gif') -20px 0px;
 	overflow:hidden;	
 }
-.dashboard .text_follow, .dashboard .text_reply, .dashboard .text_message{
+.dashboard .text_follow, .dashboard .text_reply, .dashboard .text_message, .dashboard .text_collect{
 		display: inline-block;
 		width:134px;
 		line-height:14px;
@@ -800,6 +800,14 @@ form.edit_page .submit_box input{
 	width:14px;
 	height:14px;
 	background:url('images/icons.gif') -60px 0px;
+	overflow:hidden;
+}
+
+.dashboard .icon_collect{
+	display: inline-block;
+	width:14px;
+	height:14px;
+	background:url('images/icons.gif') -40px 0px;
 	overflow:hidden;
 }
 
@@ -871,7 +879,7 @@ form.edit_page .submit_box input{
 	margin-left:-18px;
 	margin-bottom:10px;
 }
-.dashboard .dash_operation .my_reply, .dashboard .dash_operation .my_message{
+.dashboard .dash_operation .my_reply, .dashboard .dash_operation .my_message, .dashboard .dash_operation .my_collect{
 	margin-bottom:10px;
 	margin-top:10px;
 }
@@ -1297,8 +1305,14 @@ form.edit_page .submit_box input{
 	line-height:40px;
 	padding-right:10px;
 }
+.customize div.error{
+height:30px;
+font-size:12px;
+color:red;
+line-height:30px;
+}
 
-.customize .nav input{
+.customize .nav input, .customize .themes input{
     -moz-border-bottom-colors: none;
     -moz-border-image: none;
     -moz-border-left-colors: none;
@@ -1315,6 +1329,8 @@ form.edit_page .submit_box input{
     font-size:14px;
     padding: 6px 10px;
     text-decoration: none;
+    _padding:6px 10px 0px 10px;
+    _margin-top:5px;
 }
 
 .customize .nav input.save{
@@ -1330,30 +1346,132 @@ form.edit_page .submit_box input{
     border-right: 1px solid #DDDDDD;
     padding:15px;
     font-size:18px;
-}
-
-.customize .info{
-	width:380px;
-	height:500px;
+    color:#444444;
+    position: absolute;
 }
 
 .customize h1{
-	margin:0px;
+	margin:0px 0px 8px 0px;
 	padding:0px;
 	font-size: 18px;
 	font-weight: bold;
 }
 
-.customize .info .title{
+.customize .info{
+	width:380px;
+	height:530px;
+	left:10px;
+}
+
+.customize .info input, .customize .info textarea{
     background: url("images/input_bg.gif") repeat-x scroll center top #FFFFFF;
     border: 1px solid #DDDDDD;
-    font: 16px;
-    max-width: 350px;
-    min-width: 350px;
-    outline: 0 none;
-    padding: 5px;
-    width: 350px;
+	padding: 5px;
+    font-size: 18px;
+
 }
+
+.customize .info .title{
+    width: 368px;
+    max-width: 368px;
+    min-width: 368px;
+}
+
+.customize .info .link{
+	width:240px;
+    max-width: 240px;
+    min-width: 240px;
+    display:block;
+    float:left;
+    text-align:right
+}
+.customize .info span{
+	display:block;
+	float:left;
+	padding-top:8px
+}
+
+.customize .info textarea{
+	height:150px;
+	font-size:12px;
+    width: 368px;
+    max-width: 368px;
+    min-width: 368px;
+}
+
+.customize .info img{
+	vertical-align:top
+}
+
+.customize .info .image{
+	    width: 200px;
+	    font-size:12px;
+	    overflow:hidden;
+	    display:inline;
+	    margin-left:10px;
+}
+
+.customize .themes {
+	width:750px;
+	height:530px;
+	left:69px;
+}
+
+.customize .themes .pool{
+	width:750px;
+	height:480px;
+	overflow-y:auto;
+	overflow-x:hidden;
+}
+
+.customize .themes .edit{
+	
+}
+
+.customize .theme {
+    float: left;
+    margin-right: 20px;
+    margin-top: 17px;
+    overflow: hidden;
+    width: 215px;
+}
+
+.customize .pool span {
+    border: 7px solid #E2E2E2;
+    cursor: pointer;
+    display: block;
+    height: 120px;
+    overflow: hidden;
+}
+
+.customize div.pool div.clicked span{
+    border: 7px solid #F9D853;
+}
+
+.customize .pool .shadow {
+    background: url("images/customize_theme_shadow.png") no-repeat scroll center center transparent;
+    height: 9px;
+    line-height:9px;
+    font-size:1px;
+}
+
+
+.customize .pool div {
+    font-weight:bold;
+    font-size:14px
+}
+
+.customize .theme div a{
+    font-weight:normal;
+    color:gray;
+    text-decoration:none;
+}
+
+.customize div.themes input{
+	margin-top:15px;
+	background:#57c328;
+}
+
 
 
 
