--- a/app/views/posts/favors.html.haml
+++ b/app/views/posts/favors.html.haml
@@ -1,17 +1,9 @@
 - content_for :head do
-  = stylesheet_link_tag 'post_display'
+  = stylesheet_link_tag 'post_display', 'dashboard'
 
 .favor_list
   %h1= %(共#{@posts_count}个收藏)
     
   .timeline
-    - @posts.each do |p|
-      .article.tar_post
-        .avatar
-          .image<
-            %a{href: blog_path(p.blog)}<
-              =image_tag p.blog.icon.url_for(:medium)
-          %div<
-            %a.page_name{href: blog_path(p.blog)}= p.blog.title
-        .content= render_post p
+    = render :partial => "posts/post_full", :collection => @posts, :as => :post
   = pagination @posts
