--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -49,6 +49,13 @@
                 = "(#{current_user.messages.unreads.count}新)"
             消息
       %hr
+      .my_collect
+        %a{ :href => "/posts/favors" }
+          %span.icon_collect<
+            &nbsp;
+          %span.text_collect<
+            消息
+      %hr
     .my_pages.shrinked{data: {widget: "shrinked", trigger: ".selector"}}
       %a.selector{href: "/home/#{@blog.uri}"}
         = @blog.title
