--- a/app/views/posts/favors.html.haml
+++ b/app/views/posts/favors.html.haml
@@ -2,7 +2,7 @@
   = stylesheet_link_tag 'post_display', 'dashboard'
 
 .favor_list
-  %h1= %(共#{@posts_count}个收藏)
+  %h1= %(#{@posts_count}喜欢)
     
   .timeline
     = render :partial => "posts/post_full", :collection => @posts, :as => :post
