--- a/app/views/posts/favors.html.haml
+++ b/app/views/posts/favors.html.haml
@@ -1,8 +1,10 @@
+- content_for :title, "我喜欢的_宽岛"
 - content_for :head do
   = stylesheet_link_tag 'post_display', 'dashboard'
 
 .favor_list
-  %h1= %(#{@posts_count}喜欢)
+  %h1
+    = (@posts_count > 0) ? %(我喜欢的) : %(还没有任何喜欢的呢)
     
   .timeline
     = render :partial => "posts/post_full", :collection => @posts, :as => :post
