--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -269,11 +269,12 @@
   .fave
     background-position: 0 -20px
     &:hover
+      background-position: 0 0
 
   .faved
     background-position: 0 -60px
     &:hover
-    background-position: 0 -40px
+      background-position: 0 -40px
 
     
 
