--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,14 +1,14 @@
 - js 'post_display'
 %div[post]{:class => type}
   .content_head
-    - if @user and post.editable_by? @user
+    - if current_user and post.editable_by? current_user
       %a.remove{ :href => "/posts/#{post.id}", :title => '删除',
         :data => { :widget => "rest", :callback => "del", :md => "delete", :parent => "tar_post" }}<
         删除
       = link_to "编辑", "/posts/#{post.id}/edit", :class => 'edit', :title => '编辑'
     = link_to "转贴", "/posts/#{post.id}/renew", :class => 'repost', :title => '转贴'
     - favor_href, favor_data = "/posts/#{post.id}/favor_toggle", { :widget => "rest", :callback => "toggle", :md => "put" }
-    - if @user and post.favored_by? @user
+    - if current_user and post.favored_by? current_user
       - favor_data["class"] = "fave"
       - favor_data["title"] = "喜欢"
       %a{ :href => favor_href, :title => '不喜欢', :class => 'faved', :data => favor_data }<
