--- a/lib/default_blog_template.mustache
+++ b/lib/default_blog_template.mustache
@@ -11,7 +11,7 @@
     <script src="/javascripts/application.js" type="text/javascript"></script>
     <script src="/javascripts/post_display.js" type="text/javascript"></script>
   </head>
-  <body class={{special_class}}>
+  <body>
     <div id="wrapper">
       <div class='commands'>
         <a class='back_to_home' href='{{home_url}}'>
@@ -37,7 +37,7 @@
               {{/photo_single}}
 
               {{#link}}
-                <a href="{{url}}">{{title}}</a>
+                <a href="{{link_url}}">{{title}}</a>
                 <p>{{content}}</p>
               {{/link}}
               {{#video}}
@@ -48,7 +48,7 @@
             <div class='content_footer'>
               <div class='left'>
                 {{#author}}
-                <span class='writer_name'><a href='{{url}}'>
+                <span class='writer_name'><a href='{{user_url}}'>
                   {{name}}
                 </a></span>
                 {{/author}}
