--- a/app/views/shared/_pagination_standard.html.haml
+++ b/app/views/shared/_pagination_standard.html.haml
@@ -1,8 +1,4 @@
-.page_control
+.number_page_control
   - start_page.upto(show_page) do |i|
-    - if current_page == i
-      .current<
-        = i
-    -else
-      %a{href: "#{base_url}/page/#{i}"}<
-        = i
+    %a{href: "#{base_url}/page/#{i}", class: (current_page == i ? "clicked" : "")}<
+      = i
