--- a/app/views/shared/_pagination_standard.html.haml
+++ b/app/views/shared/_pagination_standard.html.haml
@@ -1,4 +1,4 @@
 .number_page_control
-  - start_page.upto(show_page) do |i|
+  - start_page.upto(end_page) do |i|
     %a{href: "#{base_url}/page/#{i}", class: (current_page == i ? "clicked" : "")}<
       = i
