Blog#custom_css

--- a/lib/default_blog_template.mustache
+++ b/lib/default_blog_template.mustache
@@ -9,6 +9,9 @@
     <script src="/javascripts/rails.js" type="text/javascript"></script>
     <script src="/javascripts/mootools-more.js" type="text/javascript"></script>
     <script src="/javascripts/application.js" type="text/javascript"></script>
+    <style>
+      {{custom_css}}
+    </style>
   </head>
   <body>
     <div id="wrapper">
