--- a/app/views/posts/wall.html.haml
+++ b/app/views/posts/wall.html.haml
@@ -1,9 +1,10 @@
 - content_for :head do
   = stylesheet_link_tag 'wall'
+- js 'wall'
 
 .wall
   %h1 不准看!
   
-  .list
-    - @posts.each do |p|
-      = render_brief p
+  .list.store
+    %ul
+      = render partial: "posts/brief", collection: @posts, as: :post
