remove wall layout

--- a/app/views/posts/wall.html.haml
+++ b/app/views/posts/wall.html.haml
@@ -1,13 +1,18 @@
+- content_for :site_layout, "site_max_size"
+
 - content_for :head do
   = stylesheet_link_tag 'wall'
 - js 'wall'
 
-#wrapper
-  .commands
-    %a.back_to_home{href: fucking_root}
-      回我的主页
+- content_for :content, do
+  #wrapper
+    .commands
+      %a.back_to_home{href: fucking_root}
+        回我的主页
+  .wall
+    .list.store
+      %ul
+        = render partial: "posts/brief", collection: @posts, as: :post
 
-.wall
-  .list.store
-    %ul
-      = render partial: "posts/brief", collection: @posts, as: :post
+  = render :partial => 'shared/footer'
+
