--- a/public/stylesheets/wall.sass
+++ b/public/stylesheets/wall.sass
@@ -10,8 +10,10 @@ ul,dl
 img
   border: 0
 
-.site_max_size
+body
   background: black
+
+.site_max_size
   overflow: hidden
 
 #wrapper
@@ -29,9 +31,9 @@ img
   .back_to_home
     text-indent: -9999px
     margin-left: 10px
-    height: 20px
-    width: 80px
-    background: url('/images/btn_backhome.gif')
+    height: 30px
+    width: 30px
+    background: url('/images/wall_home.gif')
 
 .wall
   @include clear_fix
