--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,6 +8,8 @@
 .header
   %a.logo{href: "/home"}
   .dash_navigator
+    %a{href: "/wall"}墙
+    &nbsp;|&nbsp;
     %a{href: "/news"}随便看看
     &nbsp;|&nbsp;
     %a{href: edit_user_path(current_user)}设置
