--- a/app/views/posts/news.html.haml
+++ b/app/views/posts/news.html.haml
@@ -1,3 +1,6 @@
+- @sub_title = '随便看看_宽岛'
+- content_for :title, @sub_title
+
 - content_for :head do
   = stylesheet_link_tag 'post_display', 'dashboard'
 
