--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -147,30 +147,105 @@ span.suggestion
   .upgrade, .kick, .exit
     text-decoration: underline
 
+.customize_panel
+  background: url("/images/customize_menu_bg.png") repeat-x scroll 0 0 #EEEEEE
+  height: 40px
+  min-width: 950px
+  padding-left: 10px
 
-#blog_custom_forms
+.customize_commands
+  float: right
+  padding: 10px
+
+.customize_navigation
+  float: left
+
   li
-    display: none
+    float: left
+    height: 40px
+    line-height: 38px
+    padding: 0 12px
+    text-decoration: none
+    color: #555555
+    font-size: 18px
+    cursor: pointer
 
-  li.activated
+    &.activated
+      background: url("/images/customize_menu_bg_active.png") repeat-x scroll 0 0 #2E6DCC
+      color: #ffffff
+
+form.edit_blog
+  .menu
+    display: none
+    border: none
+    padding: 0
+    margin: 0
+    background: url("/images/white_95.png") repeat scroll 0 0 transparent
+    border-bottom: 1px solid #DDDDDD
+    border-bottom-left-radius: 10px
+    border-bottom-right-radius: 10px
+    border-left: 1px solid #EEEEEE
+    border-right: 1px solid #DDDDDD
+    padding: 15px
+    font-size: 18px
+    color: #444444
+    position: absolute
+
+  .activated
     display: block
 
-#blog_custom_forms .blog_info
-  padding: 1.2em
-    font-size: 12px
-    line-height: 16px
+.edit_blog
+  font-size: 12px
+  line-height: 16px
 
   label, input
     margin-top: 12px
     margin-bottom: 12px
     height: 16px
 
-  input
-    @include inline_block
-
-  label,
-  .page_name input
+  label
+    margin: 0px 0px 8px 0px
+    padding: 0px
+    font-size: 18px
+    font-weight: bold
     display: block
+
+  .blog_info
+    width: 380px
+    height: 530px
+    left: 10px
+
+    input
+      background: url("/images/input_bg.gif") repeat-x scroll center top #FFFFFF
+      border: 1px solid #DDDDDD
+      padding: 5px
+      font-size: 18px
+
+    .who_did_this
+      @include clear_fix
+
+    .title
+      width: 368px
+      max-width: 368px
+      min-width: 368px
+
+    .link
+      width: 240px
+      max-width: 240px
+      min-width: 240px
+      float: left
+      text-align: right
+
+    .root_domain
+      float: right
+      padding-top: 18px
+
+    .image
+      width: 200px
+      font-size: 12px
+      overflow: hidden
+      display: inline
+      margin-left: 10px
 
 .customize_navigation
   @include clear_fix
