--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -247,6 +247,65 @@ form.edit_blog
       display: inline
       margin-left: 10px
 
+  .advanced
+    width: 320px
+    height: 100px
+    left: 225px
+
+    .item
+      padding: 8px 0px
+
+      label
+        margin-left: 3px
+
+  .template
+    width: 750px
+    height: 530px
+    left: 69px
+
+    input
+      margin-top: 15px
+      background: #57c328
+
+    .pool
+      width: 750px
+      height: 480px
+      overflow-y: auto
+      overflow-x: hidden
+
+      .shadow
+        background: url("images/customize_theme_shadow.png") no-repeat scroll center center transparent
+        height: 9px
+        line-height: 9px
+        font-size: 1px
+
+      div
+        font-weight: bold
+        font-size: 14px
+
+    .theme
+      float: left
+      margin-right: 20px
+      margin-top: 17px
+      overflow: hidden
+      width: 215px
+
+      div a
+        font-weight: normal
+        color: gray
+        text-decoration: none
+
+
+    .image
+      border: 7px solid #E2E2E2
+      cursor: pointer
+      display: block
+      height: 120px
+      overflow: hidden
+
+    .activated .image
+      border: 7px solid #F9D853
+
 .customize_navigation
   @include clear_fix
 
