--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -1,7 +1,8 @@
 @import 'base'
 
 .content
-  margin-left: 86px
+  margin-left: 77px
+  *margin-left: 75px
   width: 600px
   @include border-radius(15px)
   border: 1px solid #dcdcdc
